--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
         <title>Das Tree</title>
+        <script type="text/javascript" src="main.js">
+        </script>
 </head>
 <body>
 
