--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         </script>
 </head>
 <body>
+<div>
+    <input type="text" style="width: 40%" placeholder="How tall should the tree be?">
+</div>
+<div>
+    <input type="text" style="width: 40%" placeholder="Which character should be used?">
+</div>
+
+<button class="grow">Grow your tree</button>
 
 </body>
 </html>
