--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
         <title>Das Tree</title>
         <script type="text/javascript" src="main.js">
-        </script>
+        </script><link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<div>
-    <input type="text" style="width: 40%" placeholder="How tall should the tree be?">
+<h1>Time to grow your tree!</h1>
+<div class="treeHeight">
+    <input type="text" style="width: 30%" placeholder="How tall should the tree be?">
 </div>
-<div>
-    <input type="text" style="width: 40%" placeholder="Which character should be used?">
+<div class="treeChar">
+    <input type="text" style="width: 30%" placeholder="Which character should be used?">
 </div>
 
+<div class="button">
 <button class="grow">Grow your tree</button>
+</div>
 
 </body>
 </html>
