added lights background

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <h1>Time to grow your tree!</h1>
+
+<Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(http://www.zingerbugimages.com/backgrounds/green_lights_seamless_texture.jpg);background-position:top left;background-repeat:repeat;background-attachment:fixed;}</Style>
+
 <div class="treeHeight">
     <input type="text" style="width: 30%" placeholder="How tall should the tree be?">
 </div>
