bootstrap added/deleted sum divs/listener

--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
         <title>Das Tree</title>
         <script type="text/javascript" src="main.js">
         </script><link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css"
+        href="main.css">
 </head>
-<body>
-<h1>Time to grow your tree!</h1>
+        <body>
+        <h1>Time to grow your tree!</h1>
 
 <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(http://www.zingerbugimages.com/backgrounds/green_lights_seamless_texture.jpg);background-position:top left;background-repeat:repeat;background-attachment:fixed;}</Style>
 
-<div class="treeHeight">
-    <input type="text" style="width: 30%" placeholder="How tall should the tree be?">
-</div>
-<div class="treeChar">
-    <input type="text" style="width: 30%" placeholder="Which character should be used?">
-</div>
+        <div class="container">
+                <div class="col-md-12">
+                        <div class="col-md-12">
+                                <div class="treeHeight">
+                                    <input type="text" style="width: 30%" placeholder="How tall should the tree be?">
+                                </div>
+                        </div>
+                </div>
+        </div>
 
-<div class="button">
-<button class="grow">Grow your tree</button>
-</div>
+        <div class="container">
+                <div class="col-md-12">
+                        <div class="col-md-12">
+                                <div class="treeChar">
+                                    <input type="text" style="width: 30%" placeholder="Which character should be used?">
+                                </div>
+                        </div>
+                </div>
+        </div>
+
+        <div class="col-md-4 col-md-offset-8">
+                <div class="button">
+                 <button class="grow">Grow your tree</button>
+                </div>
+        </div>
 
 </body>
 </html>
