--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-md-12">
                         <div class="col-md-12">
                                 <div class="treeHeight">
-                                    <input type="text" style="width: 30%" placeholder="How tall should the tree be?">
+                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;" placeholder="How tall should the tree be?">
                                 </div>
                         </div>
                 </div>
@@ -27,7 +27,7 @@
                 <div class="col-md-12">
                         <div class="col-md-12">
                                 <div class="treeChar">
-                                    <input type="text" style="width: 30%" placeholder="Which character should be used?">
+                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;" placeholder="What character will make your tree?">
                                 </div>
                         </div>
                 </div>
@@ -35,7 +35,7 @@
 
         <div class="col-md-4 col-md-offset-8">
                 <div class="button">
-                 <button class="grow">Grow your tree</button>
+                 <p>Grow your tree</p>
                 </div>
         </div>
 
