--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-md-12">
                         <div class="col-md-12">
                                 <div class="treeHeight">
-                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;" placeholder="How tall should the tree be?">
+                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="How tall should the tree be?">
                                 </div>
                         </div>
                 </div>
@@ -27,13 +27,13 @@
                 <div class="col-md-12">
                         <div class="col-md-12">
                                 <div class="treeChar">
-                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;" placeholder="What character will make your tree?">
+                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px; font-family:Comic Sans MS", cursive, sans-serif;" placeholder="What character will make your tree?">
                                 </div>
                         </div>
                 </div>
         </div>
 
-        <div class="col-md-4 col-md-offset-8">
+        <div class="col-md-3 col-md-offset-8">
                 <div class="button">
                  <p>Grow your tree</p>
                 </div>
