--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
         <title>Das Tree</title>
-        <script type="text/javascript" src="main.js">
-        </script><link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css"
         href="main.css">
@@ -33,11 +32,18 @@
                 </div>
         </div>
 
+        <div>
+                <ul id="buildTree">
+                </ul>
+        </div>
+
         <div class="col-md-3 col-md-offset-8">
-                <div class="button">
+                <div class= "button" id="growButton">
                  <p>Grow your tree</p>
                 </div>
         </div>
+<script type="text/javascript" src="main.js">
+        </script>
 
 </body>
 </html>
