cleaned up/got rid of ze pointless

--- a/index.html
+++ b/index.html
@@ -13,33 +13,25 @@
 <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(http://www.zingerbugimages.com/backgrounds/green_lights_seamless_texture.jpg);background-position:top left;background-repeat:repeat;background-attachment:fixed;}</Style>
 
         <div class="container">
-                <div class="col-md-12">
-                        <div class="col-md-12">
                                 <div class="treeHeight">
                                     <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="How tall should the tree be?">
+                                    <!-- <input type="text" placeholder="How tall should the tree be?"> -->
                                 </div>
-                        </div>
-                </div>
-        </div>
 
-        <div class="container">
-                <div class="col-md-12">
-                        <div class="col-md-12">
                                 <div class="treeChar">
-                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="What character will make your tree?">
+                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="What charac<ter will make your tree?">
+
                                 </div>
-                        </div>
+
+                <div>
+                        <ul id="buildTree">
+                        </ul>
                 </div>
-        </div>
 
-        <div>
-                <ul id="buildTree">
-                </ul>
-        </div>
-
-        <div class="col-md-3 col-md-offset-8">
-                <div class= "button" id="growButton">
-                 <p>Grow your tree</p>
+                <div class="col-md-3 col-md-offset-8">
+                        <div class= "button" id="growButton">
+                         <p>Grow your tree</p>
+                        </div>
                 </div>
         </div>
 <script type="text/javascript" src="main.js">
