--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 <html>
 <head>
         <title>Das Tree</title>
-        <link rel="stylesheet" type="text/css" href="main.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css"
-        href="main.css">
+        <!-- href="main.css"> -->
 </head>
         <body>
         <h1>Time to grow your tree!</h1>
 
-<Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(http://www.zingerbugimages.com/backgrounds/green_lights_seamless_texture.jpg);background-position:top left;background-repeat:repeat;background-attachment:fixed;}</Style>
-
         <div class="container">
                                 <div class="treeHeight">
-                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="How tall should the tree be?">
-                                    <!-- <input type="text" placeholder="How tall should the tree be?"> -->
+                                    <input type="text" placeholder="How tall should the tree be?">
                                 </div>
 
                                 <div class="treeChar">
-                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="What charac<ter will make your tree?">
+                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="What character will make your tree?">
 
                                 </div>
 
