--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
         <title>Das Tree</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css"
-        <!-- href="main.css"> -->
+        href="main.css">
 </head>
         <body>
         <h1>Time to grow your tree!</h1>
 
         <div class="container">
                                 <div class="treeHeight">
-                                    <input type="text" placeholder="How tall should the tree be?">
+                                    <input type="text" placeholder="Height?">
                                 </div>
 
                                 <div class="treeChar">
-                                    <input type="text" style="width: 30%; background-color:#FCF5D8;color: #AD8C08;border:3px solid #AD8C08;border-radius: 5px;font-size: 18px;font-family:Comic Sans MS", cursive, sans-serif;" placeholder="What character will make your tree?">
+                                    <input type="text" placeholder=" Character?">
 
                                 </div>
 
