--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
         <title>Das Tree</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css"
@@ -10,19 +11,14 @@
         <h1>Time to grow your tree!</h1>
 
         <div class="container">
-                                <div class="treeHeight">
+                                <div id="treeHeight">
                                     <input type="text" placeholder="Height?">
                                 </div>
 
-                                <div class="treeChar">
-                                    <input type="text" placeholder=" Character?">
-
+                                <div id="treeChar">
+                                    <input type="text" placeholder="Character?">
                                 </div>
 
-                <div>
-                        <ul id="buildTree">
-                        </ul>
-                </div>
 
                 <div class="col-md-3 col-md-offset-8">
                         <div class= "button" id="growButton">
