--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1>Time to grow your tree!</h1>
 
         <div class="container">
-                                <div id="treeHeight">
-                                    <input type="text" placeholder="Height?">
+                                <div>
+                                    <input type="text" id="treeHeight" placeholder="Height?">
                                 </div>
 
-                                <div id="treeChar">
-                                    <input type="text" placeholder="Character?">
+                                <div>
+                                    <input type="text" id="treeChar" placeholder="Character?">
                                 </div>
 
 
